fix of align catalog items

--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -2,7 +2,8 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
-
+    align-items: flex-start;
+    
     margin: 0 auto;
 
     width: getSizeOfContainer(
